--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "test": "mocha --timeout 30000 ./tests/*.js"
+    "test": "mocha --timeout 30000 ./tests/*.spec.js"
   },
   "keywords": [],
   "author": "Adnan Kamili",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^1.0.2",
     "config": "^1.26.1",
     "kcors": "^2.2.1",
     "koa": "^2.2.0",
@@ -20,6 +21,7 @@
     "koa-router": "^7.2.0",
     "mysql": "^2.13.0",
     "sequelize": "^3.30.4",
+    "validate.js": "^0.11.1",
     "winston": "^2.3.1",
     "winston-daily-rotate-file": "^1.4.6"
   },
