--- a/package.json
+++ b/package.json
@@ -14,13 +14,17 @@
     "bcrypt": "^1.0.2",
     "bcryptjs": "^2.4.3",
     "config": "^1.26.1",
+    "jsonwebtoken": "^7.4.1",
     "kcors": "^2.2.1",
     "koa": "^2.2.0",
     "koa-bodyparser": "^4.2.0",
+    "koa-convert": "^1.2.0",
     "koa-jwt": "^3.2.2",
     "koa-logger": "^3.0.0",
+    "koa-mount": "^3.0.0",
     "koa-router": "^7.2.0",
     "mysql": "^2.13.0",
+    "oidc-provider": "^2.0.0-pre.3",
     "sequelize": "^3.30.4",
     "validate.js": "^0.11.1",
     "winston": "^2.3.1",
