--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcrypt": "^1.0.2",
     "bcryptjs": "^2.4.3",
     "config": "^1.26.1",
+    "joi": "^10.6.0",
     "jsonwebtoken": "^7.4.1",
     "kcors": "^2.2.1",
     "koa": "^2.2.0",
@@ -26,7 +27,6 @@
     "mysql": "^2.13.0",
     "oidc-provider": "^2.0.0-pre.3",
     "sequelize": "^3.30.4",
-    "validate.js": "^0.11.1",
     "winston": "^2.3.1",
     "winston-daily-rotate-file": "^1.4.6"
   },
