--- a/package.json
+++ b/package.json
@@ -31,18 +31,19 @@
     "routing-controllers": "^0.7.0",
     "sequelize": "^3.30.4",
     "typedi": "^0.5.2",
-    "typeorm": "0.1.0-alpha.31",
+    "typeorm": "^0.1.0-alpha.31",
     "winston": "^2.3.1",
     "winston-daily-rotate-file": "^1.4.6"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.0",
+    "@types/config": "0.0.32",
+    "@types/jsonwebtoken": "^7.2.2",
     "@types/koa": "^2.0.39",
     "@types/koa-bodyparser": "^3.0.23",
     "@types/koa-router": "^7.0.22",
     "@types/node": "^8.0.7",
-    "@types/bcryptjs": "^2.4.0",
-    "@types/config": "0.0.32",
-    "@types/jsonwebtoken": "^7.2.2",
+    "@types/winston": "^2.3.3",
     "chai": "^3.5.0",
     "chai-http": "^3.0.0",
     "eslint": "^3.19.0",
