--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,7 +13,7 @@
             "outFiles": [
                 "${workspaceRoot}/build/**/*.js"
             ],
-            "protocol": "inspector"
+            "protocol": "auto"
         }
     ]
 }
