--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,7 +13,8 @@
             "outFiles": [
                 "${workspaceRoot}/build/**/*.js"
             ],
-            "protocol": "auto"
+            "protocol": "auto",
+            "preLaunchTask": "tsc-build"
         }
     ]
 }
