--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,7 @@
     /* Strict Type-Checking Options */
     "strict": true, /* Enable all strict type-checking options. */
     "noImplicitAny": true,                    /* Raise error on expressions and declarations with an implied 'any' type. */
-    // "strictNullChecks": true,              /* Enable strict null checks. */
+    "strictNullChecks": false,              /* Enable strict null checks. */
     "alwaysStrict": true,                     /* Parse in strict mode and emit "use strict" for each source file. */
     "noUnusedLocals": true,                /* Report errors on unused locals. */
     // "noUnusedParameters": true,            /* Report errors on unused parameters. */
