added email normaliser

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "bcrypt": "^1.0.2",
     "bcryptjs": "^2.4.3",
+    "class-sanitizer": "0.0.5",
     "config": "^1.26.1",
     "jsonwebtoken": "^7.4.1",
     "kcors": "^2.2.1",
